apps/ntfy-public/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy-public
  namespace: ntfy-public
  labels:
    app.kubernetes.io/name: ntfy-public
spec:
  selector:
    app.kubernetes.io/name: ntfy-public
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
